<resources>
    <string name="app_name">Skyblock Connect</string>
    <string name="action_settings">Settings</string>

    <string name="put_your_api_below">Put your API below.</string>
    <string name="aaaa1111_bb22_cc33_dd44_eeeeee555555">aaaa1111-bb22-cc33-dd44-eeeeee555555</string>
    <string name="dismiss">Dismiss</string>
    <string name="set_api">Set API</string>
    <string name="input_your_api_key">Input your API key</string>
    <string name="submit">SUBMIT</string>
    <string name="update">update</string>
    <string name="set_api_key">Set API key</string>
    <string name="check_hypixel_skyblock_data">Check Hypixel Skyblock Data.</string>
    <string name="unknown">Unknown</string>
    <string name="current_mayor">Current Mayor</string>
    <string name="next_mayor">Next Mayor</string>

    <string-array name="asc_desc_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="sort_by">
        <item>A-Z</item>
        <item>Buy Price</item>
        <item>Sell Price</item>
    </string-array>

    <string-array name="delay_array">
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
    </string-array>
</resources>