<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/DataScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/data_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/minecraft_font"
                    android:minHeight="72dp"
                    android:text="@string/check_hypixel_skyblock_data"
                    android:textColor="#F0EEED"
                    android:textSize="20sp" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/sb_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/minecraft_font"
                    android:minHeight="72dp"
                    android:text=""
                    android:textColor="@color/light_yellow"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/horizontal_card"
                    android:layout_marginBottom="@dimen/horizontal_card"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/current_mayor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"

                        app:cardBackgroundColor="?attr/cardBackgroundColor"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/next_mayor"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="10sp">

                            <ImageView
                                android:id="@+id/current_mayor_skin"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/img_card_height"
                                android:layout_gravity="center"
                                android:layout_margin="2dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/app_name"
                                android:cropToPadding="true"
                                android:padding="5dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/unknown" />

                            <TextView
                                android:id="@+id/current_mayor_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_card"

                                android:layout_marginRight="@dimen/normalPadding"


                                android:text="@string/unknown"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/title"
                                tools:ignore="SpUsage,TextSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_subtitle_card"

                                android:layout_marginRight="@dimen/normalPadding"
                                android:layout_marginBottom="@dimen/normalPadding"


                                android:text="@string/current_mayor"
                                android:textColor="@color/dashboard_subtitle"
                                android:textSize="@dimen/title_description" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/next_mayor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"

                        app:cardBackgroundColor="?attr/cardBackgroundColor"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintLeft_toRightOf="@id/current_mayor"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="10sp">

                            <ImageView
                                android:id="@+id/next_mayor_skin"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/img_card_height"
                                android:layout_gravity="center"
                                android:layout_margin="2dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/app_name"
                                android:cropToPadding="true"
                                android:padding="5dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/unknown" />

                            <TextView
                                android:id="@+id/next_mayor_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_card"

                                android:layout_marginRight="@dimen/normalPadding"


                                android:text="@string/unknown"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/title"
                                tools:ignore="SpUsage,TextSizeCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_subtitle_card"

                                android:layout_marginRight="@dimen/normalPadding"
                                android:layout_marginBottom="@dimen/normalPadding"


                                android:text="@string/next_mayor"
                                android:textColor="@color/dashboard_subtitle"
                                android:textSize="@dimen/title_description" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/user_auctions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"

                        app:cardBackgroundColor="?attr/cardBackgroundColor"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintLeft_toRightOf="@id/current_mayor"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/next_mayor">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_card"

                                android:layout_marginRight="@dimen/normalPadding"


                                android:text="User Auctions"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/title"
                                tools:ignore="SpUsage,TextSizeCheck" />

                            <TextView
                                android:id="@+id/auction_house_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_subtitle_card"

                                android:layout_marginRight="@dimen/normalPadding"
                                android:layout_marginBottom="@dimen/normalPadding"


                                android:text="Check your auctions"
                                android:textColor="@color/dashboard_subtitle"
                                android:textSize="@dimen/title_description" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/bazaar_visit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        app:cardBackgroundColor="?attr/cardBackgroundColor"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/user_auctions"
                        app:layout_constraintTop_toBottomOf="@id/current_mayor">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_card"

                                android:layout_marginRight="@dimen/normalPadding"


                                android:text="Bazaar"
                                android:textColor="@color/darkTextColor"
                                android:textSize="@dimen/title"
                                tools:ignore="SpUsage,TextSizeCheck" />

                            <TextView
                                android:id="@+id/bazaar_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/normalPadding"
                                android:layout_marginTop="@dimen/top_text_subtitle_card"

                                android:layout_marginRight="@dimen/normalPadding"
                                android:layout_marginBottom="@dimen/normalPadding"


                                android:text="Check Bazaar Items"
                                android:textColor="@color/dashboard_subtitle"
                                android:textSize="@dimen/title_description" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>